cbits/Bullet.h

void btUsageBitfield_usedVertexA_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->usedVertexA
short unsigned int btUsageBitfield_usedVertexA_get(void *c); //attribute: short unsigned int btUsageBitfield->usedVertexA
void btUsageBitfield_usedVertexB_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->usedVertexB
short unsigned int btUsageBitfield_usedVertexB_get(void *c); //attribute: short unsigned int btUsageBitfield->usedVertexB
void btUsageBitfield_usedVertexC_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->usedVertexC
short unsigned int btUsageBitfield_usedVertexC_get(void *c); //attribute: short unsigned int btUsageBitfield->usedVertexC
void btUsageBitfield_usedVertexD_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->usedVertexD
short unsigned int btUsageBitfield_usedVertexD_get(void *c); //attribute: short unsigned int btUsageBitfield->usedVertexD
void* btVoronoiSimplexSolver_new(); //constructor: btVoronoiSimplexSolver  ( ::btVoronoiSimplexSolver::* )(  ) 
void btVoronoiSimplexSolver_free(void *c);
 
void btVoronoiSimplexSolver_reset(void *c); //method: reset void ( ::btVoronoiSimplexSolver::* )(  ) 
int btVoronoiSimplexSolver_updateClosestVectorAndPoints(void *c); //method: updateClosestVectorAndPoints bool ( ::btVoronoiSimplexSolver::* )(  ) 
void btVoronoiSimplexSolver_setEqualVertexThreshold(void *c,float p0); //method: setEqualVertexThreshold void ( ::btVoronoiSimplexSolver::* )( ::btScalar ) 
int btVoronoiSimplexSolver_inSimplex(void *c,float* p0); //method: inSimplex bool ( ::btVoronoiSimplexSolver::* )( ::btVector3 const & ) 
int btVoronoiSimplexSolver_closest(void *c,float* p0); //method: closest bool ( ::btVoronoiSimplexSolver::* )( ::btVector3 & ) 
int btVoronoiSimplexSolver_closestPtPointTetrahedron(void *c,float* p0,float* p1,float* p2,float* p3,float* p4,void* p5); //method: closestPtPointTetrahedron bool ( ::btVoronoiSimplexSolver::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const &,::btSubSimplexClosestResult & ) 
int btVoronoiSimplexSolver_closestPtPointTriangle(void *c,float* p0,float* p1,float* p2,float* p3,void* p4); //method: closestPtPointTriangle bool ( ::btVoronoiSimplexSolver::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const &,::btSubSimplexClosestResult & ) 
int btVoronoiSimplexSolver_pointOutsideOfPlane(void *c,float* p0,float* p1,float* p2,float* p3,float* p4); //method: pointOutsideOfPlane int ( ::btVoronoiSimplexSolver::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
int btVoronoiSimplexSolver_emptySimplex(void *c); //method: emptySimplex bool ( ::btVoronoiSimplexSolver::* )(  ) const
//not supported method: getSimplex int ( ::btVoronoiSimplexSolver::* )( ::btVector3 *,::btVector3 *,::btVector3 * ) const
// error:  - unsupported,  - unsupported,  - unsupported, int - ok

float btVoronoiSimplexSolver_maxVertex(void *c); //method: maxVertex ::btScalar ( ::btVoronoiSimplexSolver::* )(  ) 