Physics/Bullet/Raw/BulletCollision/NarrowPhaseCollision.chs

{#fun btUsageBitfield_usedVertexA_set    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexA_get    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexB_set    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexB_get    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexC_set    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexC_get    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexD_set    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btUsageBitfield_usedVertexD_get    `( BtUsageBitfieldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btVoronoiSimplexSolver
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#133>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_new as btVoronoiSimplexSolver    {  } -> `BtVoronoiSimplexSolver' mkBtVoronoiSimplexSolver* #}
{#fun btVoronoiSimplexSolver_free    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#137>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_reset as btVoronoiSimplexSolver_reset    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#125>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_updateClosestVectorAndPoints as btVoronoiSimplexSolver_updateClosestVectorAndPoints    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#141>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_setEqualVertexThreshold as btVoronoiSimplexSolver_setEqualVertexThreshold    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ threshold
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#162>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_inSimplex as btVoronoiSimplexSolver_inSimplex    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ w
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#162>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_inSimplex as btVoronoiSimplexSolver_inSimplex'    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ w
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#151>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_closest as btVoronoiSimplexSolver_closest    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ v
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#151>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_closest as btVoronoiSimplexSolver_closest'    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ v
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#127>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_closestPtPointTetrahedron as btVoronoiSimplexSolver_closestPtPointTetrahedron    `( BtVoronoiSimplexSolverClass bc , BtSubSimplexClosestResultClass p5 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ p
, withVec3* `Vec3'  peekVec3* -- ^ a
, withVec3* `Vec3'  peekVec3* -- ^ b
, withVec3* `Vec3'  peekVec3* -- ^ c
, withVec3* `Vec3'  peekVec3* -- ^ d
, withBt* `p5'  -- ^ finalResult
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#127>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_closestPtPointTetrahedron as btVoronoiSimplexSolver_closestPtPointTetrahedron'    `( BtVoronoiSimplexSolverClass bc , BtSubSimplexClosestResultClass p5 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ p
, allocaVec3-  `Vec3'  peekVec3* -- ^ a
, allocaVec3-  `Vec3'  peekVec3* -- ^ b
, allocaVec3-  `Vec3'  peekVec3* -- ^ c
, allocaVec3-  `Vec3'  peekVec3* -- ^ d
, withBt* `p5'  -- ^ finalResult
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#129>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_closestPtPointTriangle as btVoronoiSimplexSolver_closestPtPointTriangle    `( BtVoronoiSimplexSolverClass bc , BtSubSimplexClosestResultClass p4 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ p
, withVec3* `Vec3'  peekVec3* -- ^ a
, withVec3* `Vec3'  peekVec3* -- ^ b
, withVec3* `Vec3'  peekVec3* -- ^ c
, withBt* `p4'  -- ^ result
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#129>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_closestPtPointTriangle as btVoronoiSimplexSolver_closestPtPointTriangle'    `( BtVoronoiSimplexSolverClass bc , BtSubSimplexClosestResultClass p4 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ p
, allocaVec3-  `Vec3'  peekVec3* -- ^ a
, allocaVec3-  `Vec3'  peekVec3* -- ^ b
, allocaVec3-  `Vec3'  peekVec3* -- ^ c
, withBt* `p4'  -- ^ result
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#128>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_pointOutsideOfPlane as btVoronoiSimplexSolver_pointOutsideOfPlane    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ p
, withVec3* `Vec3'  peekVec3* -- ^ a
, withVec3* `Vec3'  peekVec3* -- ^ b
, withVec3* `Vec3'  peekVec3* -- ^ c
, withVec3* `Vec3'  peekVec3* -- ^ d
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#128>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_pointOutsideOfPlane as btVoronoiSimplexSolver_pointOutsideOfPlane'    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ p
, allocaVec3-  `Vec3'  peekVec3* -- ^ a
, allocaVec3-  `Vec3'  peekVec3* -- ^ b
, allocaVec3-  `Vec3'  peekVec3* -- ^ c
, allocaVec3-  `Vec3'  peekVec3* -- ^ d
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#166>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_emptySimplex as btVoronoiSimplexSolver_emptySimplex    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#153>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
{#fun btVoronoiSimplexSolver_maxVertex as btVoronoiSimplexSolver_maxVertex    `( BtVoronoiSimplexSolverClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h?r=2223#139>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp?r=2223>
-}
